--- a/Yao_QC_learning/LS_EDF_QC/Project.toml
+++ b/Yao_QC_learning/LS_EDF_QC/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 BitBasis = "50ba71b6-fa0f-514d-ae9a-0916efc90dcf"
 CuYao = "b48ca7a8-dd42-11e8-2b8e-1b7706800275"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Yao = "5872b779-8223-5990-8dd0-5abbb0748c8c"
