start the QML model, amanha continuo

--- a/Yao_QC_learning/Yao_codebook/Project.toml
+++ b/Yao_QC_learning/Yao_codebook/Project.toml
@@ -7,6 +7,8 @@ version = "0.1.0"
 CuYao = "b48ca7a8-dd42-11e8-2b8e-1b7706800275"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ImageInTerminal = "d8c32880-2388-543b-8c61-d9f865259254"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 Yao = "5872b779-8223-5990-8dd0-5abbb0748c8c"
 YaoPlots = "32cfe2d9-419e-45f2-8191-2267705d8dbc"
