--- a/Reinforcement_learning/RL_studies/Project.toml
+++ b/Reinforcement_learning/RL_studies/Project.toml
@@ -6,3 +6,5 @@ version = "0.1.0"
 [deps]
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ReinforcementLearning = "158674fc-8238-5cab-b5ba-03dfc80d1318"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
